# Fingerprinter

./: .gitignore  CMakeLists.txt  Doxyfile  README  build.py  buildall.pro  lastfmfpclient.pro  readme-osx.txt  readme-unix.txt  readme.txt
debian/: changelog  control  copyright  lastfm-fpclient.install  lastfm-libfplib-dev.install  lastfm-libfplib.install  rules
debian/source/: local-options
doc/: readme-osx.txt  readme-unix.txt
fplib/: CMakeLists.txt  fplib.pro  fplib_qmake.pro  fplib_qmake.vcproj  fplib_tmake.pro
fplib/include/: FingerprintExtractor.h
fplib/pro_qmake/: fplib.pro
fplib/src/: CircularArray.h  Filter.cpp  Filter.h  FingerprintExtractor.cpp  FloatingAverage.h  OptFFT.cpp  OptFFT.h  SimpleDownsampler.h  SimpleDownsampler.hpp  fp_helper_fun.h
fplib/win32/: fplib.vcproj
include/fplib/: FingerprintExtractor.h  FloatingAverage.h  OptFFT.h  fp_helper_fun.h  version.h
lastfmclient/: lastfmfpclient.pro
lastfmclient/src/: MP3_Source.cpp  MP3_Source.h  Sha256.cpp  Sha256File.cpp  main.cpp  mbid_mp3.h
lastfmclient/win32/: lastfmclient.vcproj
lastfmfpclient/: CMakeLists.txt  lastfmfpclient.pro
lastfmfpclient/src/: HTTPClient.cpp  HTTPClient.h  MP3_Source.cpp  MP3_Source.h  Sha256File.cpp  Sha256File.h  main.cpp  mbid_mp3.h
lastfmfpclient/win32/: lastfmfpclient.vcproj
mp3decoder/src/: MP3_Source.cpp  MP3_Source.h  PCM_Source.h
mp3decoder/win32/: mp3decoder.vcproj
src/fpclient/: HTTPClient.cpp  HTTPClient.h  MP3_Source.h  Sha256File.h  main.cpp  mbid_mp3.h
src/fplib/: CircularArray.h  Filter.cpp  Filter.h  FingerprintExtractor.cpp  OptFFT.cpp
win32/: lastfm_fplib.sln
