PROJECT(liblastfmfp)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

# uncomment if you wanna see some verbose action
#SET(CMAKE_VERBOSE_MAKEFILE ON)

SET (LASTFM_FP_MAJOR 1)
SET (LASTFM_FP_MINOR 6)
SET (LASTFM_FP_PATCH 0)

# binaries get installed here
SET(CMAKE_INSTALL_PREFIX "/usr/")

#add definitions, compiler switches, etc.
ADD_DEFINITIONS(-Wall -O2 -DNDEBUG -g `getconf LFS_CFLAGS`)

INCLUDE_DIRECTORIES(include src)

IF(APPLE)
INCLUDE_DIRECTORIES(/opt/local/include/)
ENDIF(APPLE)

SET( LASTFM_FP_SOURCES
     src/Filter
     src/FingerprintExtractor
     src/OptFFT
   )

ADD_LIBRARY(lastfmfp_static STATIC ${LASTFM_FP_SOURCES})
ADD_LIBRARY(lastfmfp_shared SHARED ${LASTFM_FP_SOURCES})

SET_TARGET_PROPERTIES( lastfmfp_static PROPERTIES OUTPUT_NAME lastfmfp_static)
SET_TARGET_PROPERTIES( lastfmfp_shared PROPERTIES OUTPUT_NAME lastfmfp)
SET_TARGET_PROPERTIES( lastfmfp_shared PROPERTIES VERSION ${LASTFM_FP_MAJOR}.${LASTFM_FP_MINOR}.${LASTFM_FP_PATCH} SOVERSION ${LASTFM_FP_MAJOR})

INSTALL(TARGETS lastfmfp_static ARCHIVE DESTINATION lib)
INSTALL(TARGETS lastfmfp_shared LIBRARY DESTINATION lib)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
SET(CPACK_SET_DESTDIR TRUE)
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Norman Casagrande <norman@last.fm>")
SET(CPACK_PACKAGE_VERSION_MAJOR ${LASTFM_FP_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${LASTFM_FP_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${LASTFM_FP_PATCH})

INCLUDE(CPack)
